<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_vision_bringup</name>
  <version>1.0.0</version>
  <description>RoboMaster rm_vision bringup.</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/FaterYU/rm_vision</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_vision/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm_auto_aim</depend>
  <depend>rm_serial_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
